--- a/tutorexp.html
+++ b/tutorexp.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tuteur Académique IA (Stable)</title>
+    <title>Tuteur Académique IA (Final)</title>
     <!-- CSS is unchanged and is omitted here for brevity -->
     <style>:root{--user-color:#007bff;--tutor-color:#f1f1f1;--background-color:#ffffff;--text-color:#212529;--border-color:#dee2e6}body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;margin:0;display:flex;flex-direction:column;height:100vh;background-color:var(--background-color);color:var(--text-color)}#header{display:flex;justify-content:space-between;align-items:center;padding:.75rem 1.5rem;border-bottom:1px solid var(--border-color);background-color:var(--background-color);flex-shrink:0}#header h1{font-size:1.25rem;margin:0}#status{font-size:.8rem;color:#6c757d}.ai-mode-toggle{display:flex;align-items:center;gap:.5rem}.switch{position:relative;display:inline-block;width:100px;height:34px}.switch input{opacity:0;width:0;height:0}.slider{position:absolute;cursor:pointer;top:0;left:0;right:0;bottom:0;background-color:#ccc;transition:.4s;border-radius:34px}.slider:before{position:absolute;content:"";height:26px;width:26px;left:4px;bottom:4px;background-color:white;transition:.4s;border-radius:50%}input:checked+.slider{background-color:var(--user-color)}input:checked+.slider:before{transform:translateX(66px)}.slider:after{content:'Tuteur';color:white;display:block;position:absolute;transform:translate(-50%,-50%);top:50%;left:30%;font-size:12px}input:checked+.slider:after{content:'Analyste';left:70%}#chat-container{flex-grow:1;padding:1rem 1.5rem;overflow-y:auto;display:flex;flex-direction:column;gap:1rem}.message{padding:10px 18px;border-radius:22px;max-width:80%;line-height:1.5;word-wrap:break-word}.user-message{background-color:var(--user-color);color:white;align-self:flex-end}.tutor-message{background-color:var(--tutor-color);color:var(--text-color);align-self:flex-start}.tutor-message.loading::after{content:'...';display:inline-block;animation:dots 1.5s infinite steps(3,end)}@keyframes dots{0%{content:'.'}33%{content:'..'}66%{content:'...'}}#input-area{display:flex;padding:1rem 1.5rem;border-top:1px solid var(--border-color);background-color:rgba(255,255,255,.8);backdrop-filter:blur(10px)}#user-input{flex-grow:1;border:1px solid #ccc;border-radius:22px;padding:10px 18px;font-size:1rem;resize:none}#send-btn{background-color:var(--user-color);color:white;border:none;border-radius:50%;width:44px;height:44px;margin-left:10px;font-size:1.5rem;cursor:pointer;transition:background-color .2s;display:flex;align-items:center;justify-content:center}#send-btn:disabled{background-color:#a0a0a0;cursor:not-allowed}</style>
 </head>
 <body>
     <div id="header">
-        <div><h1>Tuteur Académique IA</h1><div id="status">Chargement...</div></div>
+        <div><h1>Extremely smart AI</h1><div id="status">Chargement...</div></div>
         <div class="ai-mode-toggle"><label class="switch"><input type="checkbox" id="ai-mode-checkbox"><span class="slider"></span></label></div>
     </div>
     <div id="chat-container"></div>
@@ -29,7 +29,18 @@
         let studentDataContext = '';
         let currentAiMode = 'tuteur';
 
-        // Helper functions are unchanged
+        // --- NEW, HYPER-DETAILED PROMPTS ---
+        const PROMPT_TUTEUR = `Tu es un tuteur académique expert, amical et encourageant. Ton rôle est de synthétiser les données fournies pour répondre à la question de l'étudiant de manière utile, personnalisée et facile à comprendre.`;
+        const PROMPT_ANALYSTE = `Tu es un analyste de données logique et objectif. Ton rôle est d'extraire et de présenter les faits pertinents des données fournies pour répondre à la question de manière factuelle, chiffrée et concise. N'utilise aucun langage émotionnel ou d'opinion.`;
+        const BASE_INSTRUCTIONS = `Règles Strictes et Obligatoires:
+1. Analyse l'intégralité du CONTEXTE pour trouver les informations pertinentes à la QUESTION.
+2. Formule une réponse entièrement nouvelle en utilisant tes propres mots. Ne copie JAMAIS de phrases directement du contexte.
+3. Ta réponse doit être une synthèse cohérente, pas une simple liste de données.
+4. Si la réponse n'est pas dans le contexte, réponds UNIQUEMENT: "Je n'ai pas cette information dans les données fournies."
+5. Sois concis et va droit au but.`;
+        // --- END OF NEW PROMPTS ---
+
+        // Helper functions (addMessage, formatDataForSLM) are unchanged
         function addMessage(text, sender) {const messageDiv = document.createElement('div');messageDiv.classList.add('message', `${sender}-message`);messageDiv.textContent = text;chatContainer.appendChild(messageDiv);chatContainer.scrollTop = chatContainer.scrollHeight;return messageDiv;}
         function formatDataForSLM(rawData, analysisData) {let summary = ``;if (rawData?.nom) summary += `Nom de l'étudiant: ${rawData.nom}\n`;['etape1', 'etape2'].forEach(etape => {if (rawData[etape] && rawData[etape].length > 0) {summary += `\n--- RÉSULTATS ${etape.toUpperCase()} ---\n`;rawData[etape].forEach(subject => {summary += `Sujet: ${subject.name} (${subject.code})\n`;subject.competencies.forEach(comp => {comp.assignments.forEach(assign => {if (assign.result) summary += `- Travail: "${assign.work}", Résultat: ${assign.result}\n`;});});});}});if (analysisData) {summary += `\n--- ANALYSE PRÉDICTIVE ---\n`;if(analysisData.globalAverage) summary += `- Moyenne générale (calculée): ${analysisData.globalAverage.toFixed(2)}%\n`;if(analysisData.burnoutRiskScore) summary += `- Score de risque de burnout: ${analysisData.burnoutRiskScore.toFixed(0)}/100\n`;if(analysisData.globalConsistencyScore) summary += `- Indice de consistance: ${analysisData.globalConsistencyScore.toFixed(0)}/100\n`;if(analysisData.predictions?.global?.p50) summary += `- Prédiction de la moyenne finale: ${analysisData.predictions.global.p50.toFixed(2)}%\n`;}return summary;}
 
@@ -42,30 +53,10 @@
             const loadingMessage = addMessage("Réflexion en cours...", 'tutor');
             loadingMessage.classList.add('loading');
             
-            const personalityPrompt = currentAiMode === 'tuteur' 
-                ? `Tu agis comme un tuteur académique amical et encourageant.`
-                : `Tu agis comme un analyste de données logique et objectif.`;
+            const personalityPrompt = currentAiMode === 'tuteur' ? PROMPT_TUTEUR : PROMPT_ANALYSTE;
             
-            // --- THIS IS THE HYPER-SPECIFIC PROMPT TO FORCE THE "DUMB" AI TO BE SMART ---
-            const fullPrompt = `Tâche: Tu es une fonction de traitement de texte. Ton seul but est d'analyser le CONTEXTE ci-dessous pour répondre à la QUESTION de l'utilisateur.
-
-Règles Strictes:
-1. Ta réponse doit être une synthèse des informations trouvées UNIQUEMENT dans le CONTEXTE. Ne copie pas de phrases entières.
-2. Ne répète jamais la question.
-3. Si la réponse n'est pas dans le contexte, réponds "Je n'ai pas l'information dans les données fournies."
-4. ${personalityPrompt}
-
----
-CONTEXTE:
-${studentDataContext}
----
-
-QUESTION:
-${query}
-
-RÉPONSE CONCISE:
-`;
-            // --- END OF NEW PROMPT ---
+            // This is the improved prompt that forces the AI to be smart
+            const fullPrompt = `TÂCHE:\n${personalityPrompt}\n${BASE_INSTRUCTIONS}\n\nCONTEXTE:\n---\n${studentDataContext}\n---\n\nQUESTION:\n"${query}"\n\nRÉPONSE SYNTHÉTISÉE:`;
 
             try {
                 const result = await tutorPipeline(fullPrompt, {
