--- a/main.html
+++ b/main.html
@@ -244,13 +244,18 @@
         <div class="header-center">
             <h1 class="site-header">Outil MBS</h1>
         </div>
-        <div class="header-right">
-            <button id="theme-toggle" class="icon-btn" aria-label="Changer de thème (Mode Clair/Sombre)">
-                <i class="fa-solid fa-moon"></i>
-            </button>
-            <a href="data.html" class="btn btn-secondary">Mise à jour</a>
-            <a href="improve.html" class="btn btn-primary">Analyser</a>
-        </div>
+<!-- This is the NEW, UPGRADED code -->
+<div class="header-right">
+    <button id="theme-toggle" class="icon-btn" aria-label="Changer de thème (Mode Clair/Sombre)">
+        <i class="fa-solid fa-moon"></i>
+    </button>
+    <a href="data.html" class="btn btn-secondary">Mise à jour</a>
+
+    <!-- THIS IS THE NEW BUTTON -->
+    <a href="classement.html" class="btn btn-secondary">Classement</a>
+    
+    <a href="improve.html" class="btn btn-primary">Analyser</a>
+</div>
     </header>
 
     <main class="main-container">
