--- a/improve.html
+++ b/improve.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -51,19 +52,15 @@
             --goal-success-bg: #1a3e2a;
             --goal-warning-bg: #4d381c;
             --goal-danger-bg: #4f2323;
+            .site-header, .widget-title { color: var(--text-color); }
+            .comp-widget, .calculator-container { background-color: #282828; border-color: var(--border-color); }
+            .modal-content { background-color: var(--background-color); }
+            .modal-header { background-color: #2c3e50; }
+            .goal-input input { background-color: #282828; border-color: var(--light-grey); color: var(--text-color); }
+            .order-editor-content { background-color: #282828; }
+            #order-list li { background-color: #333; }
+            .grade-pill { background-color: #444; }
         }
-
-        /* Corrected Dark Mode Styles */
-        [data-theme="dark"] .site-header,
-        [data-theme="dark"] .widget-title { color: var(--text-color); }
-        [data-theme="dark"] .comp-widget,
-        [data-theme="dark"] .calculator-container { background-color: #282828; border-color: var(--border-color); }
-        [data-theme="dark"] .modal-content { background-color: var(--background-color); }
-        [data-theme="dark"] .modal-header { background-color: #2c3e50; }
-        [data-theme="dark"] .goal-input input { background-color: #282828; border-color: var(--light-grey); color: var(--text-color); }
-        [data-theme="dark"] .order-editor-content { background-color: #282828; }
-        [data-theme="dark"] #order-list li { background-color: #333; }
-        [data-theme="dark"] .grade-pill { background-color: #444; }
 
         /* GLOBAL TRANSITIONS */
         body, .site-header-container, .sticky-tabs, .subject-widget, .modal-content, .tab-btn, .comp-widget, .calculator-container, input {
@@ -85,7 +82,7 @@
         .site-header-container { background-color: var(--widget-background); box-shadow: var(--shadow-header); border-bottom: 1px solid var(--border-color); padding: 15px 25px; display: flex; align-items: center; position: relative; margin-bottom: 0; }
         .header-left { flex: 1; display: flex; justify-content: flex-start; }
         .header-center { flex: 2; text-align: center; }
-        .header-right { flex: 1; display: flex; justify-content: flex-end; align-items: center; gap: 15px; }
+        .header-right { flex: 1; display: flex; justify-content: flex-end; }
         .site-header { padding: 0; margin: 0; color: var(--secondary-color); font-size: 2.2em; font-weight: 700; font-family: 'Playfair Display', serif; display: inline-block; }
         .icon-btn { background: none; border: 2px solid var(--light-grey); color: var(--text-color); width: 40px; height: 40px; border-radius: 50%; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 1.1em; text-decoration: none; transition: all 0.2s ease, background-color var(--transition-duration), box-shadow 0.2s; }
         .icon-btn:hover { border-color: var(--primary-color); color: var(--primary-color); transform: scale(1.1); }
@@ -114,9 +111,7 @@
         .modal-overlay.active { opacity: 1; visibility: visible; }
         .modal-content, .order-editor-content { transform: scale(0.9) translateY(-20px); transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
         .modal-overlay.active .modal-content, .modal-overlay.active .order-editor-content { transform: scale(1) translateY(0); }
-        .btn { text-decoration: none; padding: 10px 20px; border-radius: 8px; font-weight: 600; transition: all 0.2s ease; }
-        .btn-secondary { background-color: #2980b9; color: white; border: none; }
-        .btn-secondary:hover { background-color: #3498db; transform: translateY(-2px); box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
+        .btn-secondary { padding: 10px 15px; border: 1px solid var(--light-grey); background-color: transparent; color: var(--text-color); border-radius: 8px; cursor: pointer; }
         .btn-primary { padding: 10px 15px; border: none; background-color: var(--success-color); color: white; border-radius: 8px; cursor: pointer; }
         
         /* Details Modal */
@@ -170,7 +165,6 @@
             <button id="theme-toggle" class="icon-btn" aria-label="Changer de thème">
                 <i class="fa-solid fa-moon"></i>
             </button>
-            <a href="projection.html" class="btn btn-secondary">Projection des résultats</a>
         </div>
     </header>
 
@@ -190,22 +184,6 @@
             <!-- Modal content populated by JS -->
         </div>
     </div>
-    
-    <!-- ADDED: Structure for the Order Editor Modal -->
-    <div id="order-editor-modal" class="modal-overlay">
-        <div class="order-editor-content">
-            <h3>Modifier l'ordre</h3>
-            <p class="editor-instructions">Glissez et déposez les matières pour les réorganiser.</p>
-            <ul id="order-list">
-                <!-- Draggable items will be populated by JS -->
-            </ul>
-            <div class="order-editor-footer">
-                <button class="btn btn-secondary" id="cancel-order">Annuler</button>
-                <button class="btn btn-primary" id="save-order">Enregistrer</button>
-            </div>
-        </div>
-    </div>
-
 
     <footer><p>Outil MBS - Moyenne, Bilan, Stratégie</p></footer>
 
