--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-<!--<head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil - Outil MBS</title>
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-   <!-- <style>
+    <style>
         :root {
             /* Animation & Transition */
             --transition-duration: 0.35s;
@@ -175,7 +175,7 @@
 
     <!-- Theme Toggle Button -->
 
-  <!--  <button id="theme-toggle" class="icon-btn theme-toggle" title="Mode Sombre/Clair">
+    <button id="theme-toggle" class="icon-btn theme-toggle" title="Mode Sombre/Clair">
         <i class="fa-solid fa-moon"></i>
     </button>
     
