added gatekeep logic (1 line call at line 93)

--- a/improve.html
+++ b/improve.html
@@ -90,6 +90,7 @@
 
         footer { text-align: center; padding: 25px; font-size: 0.9em; color: var(--footer-grey); border-top: 1px solid var(--border-color); margin-top: 40px; }
     </style>
+        <script src="js/gatekeeper.js" defer></script>
 </head>
 <body>
     <header class="site-header-container">
