--- a/improve.html
+++ b/improve.html
@@ -95,100 +95,10 @@
 <body>
 
 
-<style>
-    #gatekeeper-overlay {
-        position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-        background-color: white; z-index: 10001;
-        display: flex; justify-content: center; align-items: center; text-align: center;
-        transition: opacity 0.5s ease;
-    }
-    .gatekeeper-content {
-        font-family: 'Playfair Display', serif, sans-serif;
-        color: #2c3e50; font-size: 1.5em;
-    }
-    .gatekeeper-content .icon { font-size: 2em; margin-bottom: 15px; display: inline-block; }
-    #gatekeeper-overlay.hidden { opacity: 0; pointer-events: none; }
-</style>
 
-<div id="gatekeeper-overlay">
-    <div class="gatekeeper-content">
-        <span class="icon">🔒</span> 
-        <p id="gatekeeper-message">Vérification...</p>
-    </div>
-</div>
 
-<script>
-    // This self-executing function runs immediately.
-    (async function() {
-        'use strict';
-
-        // --- PASTE YOUR GOOGLE APPS SCRIPT URL HERE ---
-        const GATEKEEPER_API_URL = 'https://script.google.com/macros/s/AKfycbwoMsiLC8YeSri92eT37fyZGK0sroKA9ORWtFImQM9h55TmxISFnGZg4WtKBEEwGOkQfg/exec';
-        // ---------------------------------------------
-
-        const overlay = document.getElementById('gatekeeper-overlay');
-        const message = document.getElementById('gatekeeper-message');
-
-        function grantAccess() {
-            if (overlay) overlay.classList.add('hidden');
-        }
-
-        function denyAccess() {
-            if (message) message.textContent = 'Accès Restreint';
-            // Freeze scrolling if access is denied
-            document.documentElement.style.overflow = 'hidden';
-            document.body.style.overflow = 'hidden';
-        }
-
-        if (GATEKEEPER_API_URL.includes('PASTE_YOUR_WEB_APP_URL_HERE')) {
-            console.error("Gatekeeper: SCRIPT_URL is not configured.");
-            denyAccess();
-            return;
-        }
-
-        try {
-            // 1. Fetch the approved user list from your Google Sheet.
-            const response = await fetch(GATEKEEPER_API_URL);
-            if (!response.ok) throw new Error(`Server responded with status: ${response.status}`);
-            const data = await response.json();
-            if (data.error) throw new Error(data.error);
-
-            const approvedUsers = data.users;
-
-            // 2. Check for the master "FALSE" switch.
-            if (approvedUsers.length === 1 && approvedUsers[0].toString().toUpperCase() === 'FALSE') {
-                console.log("Gatekeeper disabled by server. Granting access to all.");
-                grantAccess();
-                return;
-            }
-
-            // 3. Get the user's name from both jdlmData and mbsData.
-            let userName = null;
-            try {
-                const jdlmData = JSON.parse(localStorage.getItem('jdlmData'));
-                if (jdlmData && jdlmData.nom) userName = jdlmData.nom.trim();
-            } catch (e) { /* ignore parsing errors */ }
-
-            if (!userName) {
-                try {
-                    const mbsData = JSON.parse(localStorage.getItem('mbsData'));
-                    if (mbsData && mbsData.nom) userName = mbsData.nom.trim();
-                } catch (e) { /* ignore parsing errors */ }
-            }
-
-            // 4. Check if the found name is on the approved list.
-            if (userName && approvedUsers.includes(userName)) {
-                grantAccess();
-            } else {
-                denyAccess();
-            }
-
-        } catch (error) {
-            console.error("Gatekeeper Error:", error);
-            denyAccess(); // Deny access if there's any error
-        }
-    })();
-</script>
+<!-- =================== OPTIMIZED GATEKEEPER BLOCK START =================== -->
+<!-- Paste this entire block directly after your opening <body> tag -->
 
 <style>
     #gatekeeper-overlay {
@@ -208,7 +118,7 @@
 <div id="gatekeeper-overlay">
     <div class="gatekeeper-content">
         <span class="icon">🔒</span> 
-        <p id="gatekeeper-message">Vérification...</p>
+        <p id="gatekeeper-message">Vérification de l'accès...</p>
     </div>
 </div>
 
@@ -217,9 +127,8 @@
     (async function() {
         'use strict';
 
-        // --- PASTE YOUR GOOGLE APPS SCRIPT URL HERE ---
         const GATEKEEPER_API_URL = 'https://script.google.com/macros/s/AKfycbwoMsiLC8YeSri92eT37fyZGK0sroKA9ORWtFImQM9h55TmxISFnGZg4WtKBEEwGOkQfg/exec';
-        // ---------------------------------------------
+        const GATEKEEPER_SESSION_KEY = 'gatekeeper_status'; // Our "wristband" key
 
         const overlay = document.getElementById('gatekeeper-overlay');
         const message = document.getElementById('gatekeeper-message');
@@ -228,21 +137,31 @@
             if (overlay) overlay.classList.add('hidden');
         }
 
-        function denyAccess() {
-            if (message) message.textContent = 'Accès Restreint';
-            // Freeze scrolling if access is denied
+        function denyAccess(msg = 'Accès Restreint') {
+            if (message) message.textContent = msg;
             document.documentElement.style.overflow = 'hidden';
             document.body.style.overflow = 'hidden';
         }
 
+        // --- THIS IS THE NEW, FASTER LOGIC ---
+        // 1. Check for a session "pass" first (the fast path).
+        if (sessionStorage.getItem(GATEKEEPER_SESSION_KEY) === 'granted') {
+            console.log("Gatekeeper: Session pass found. Granting access instantly.");
+            grantAccess();
+            return; // Stop right here, no network call needed.
+        }
+        // --- END OF NEW LOGIC ---
+
+
+        // If no session pass is found, proceed with the full verification.
         if (GATEKEEPER_API_URL.includes('PASTE_YOUR_WEB_APP_URL_HERE')) {
             console.error("Gatekeeper: SCRIPT_URL is not configured.");
-            denyAccess();
+            denyAccess("SCRIPT_URL non configuré.");
             return;
         }
 
         try {
-            // 1. Fetch the approved user list from your Google Sheet.
+            // 2. Fetch the approved user list from your Google Sheet.
             const response = await fetch(GATEKEEPER_API_URL);
             if (!response.ok) throw new Error(`Server responded with status: ${response.status}`);
             const data = await response.json();
@@ -250,29 +169,23 @@
 
             const approvedUsers = data.users;
 
-            // 2. Check for the master "FALSE" switch.
+            // 3. Check for the master "FALSE" switch.
             if (approvedUsers.length === 1 && approvedUsers[0].toString().toUpperCase() === 'FALSE') {
                 console.log("Gatekeeper disabled by server. Granting access to all.");
+                sessionStorage.setItem(GATEKEEPER_SESSION_KEY, 'granted'); // Give a pass for this session
                 grantAccess();
                 return;
             }
 
-            // 3. Get the user's name from both jdlmData and mbsData.
+            // 4. Get the user's name from both jdlmData and mbsData.
             let userName = null;
-            try {
-                const jdlmData = JSON.parse(localStorage.getItem('jdlmData'));
-                if (jdlmData && jdlmData.nom) userName = jdlmData.nom.trim();
-            } catch (e) { /* ignore parsing errors */ }
+            try { const jdlmData = JSON.parse(localStorage.getItem('jdlmData')); if (jdlmData && jdlmData.nom) userName = jdlmData.nom.trim(); } catch (e) {}
+            if (!userName) { try { const mbsData = JSON.parse(localStorage.getItem('mbsData')); if (mbsData && mbsData.nom) userName = mbsData.nom.trim(); } catch (e) {} }
 
-            if (!userName) {
-                try {
-                    const mbsData = JSON.parse(localStorage.getItem('mbsData'));
-                    if (mbsData && mbsData.nom) userName = mbsData.nom.trim();
-                } catch (e) { /* ignore parsing errors */ }
-            }
-
-            // 4. Check if the found name is on the approved list.
+            // 5. Check if the found name is on the approved list.
             if (userName && approvedUsers.includes(userName)) {
+                // 5a. SUCCESS! Give the user a "pass" for this session.
+                sessionStorage.setItem(GATEKEEPER_SESSION_KEY, 'granted');
                 grantAccess();
             } else {
                 denyAccess();
@@ -280,10 +193,12 @@
 
         } catch (error) {
             console.error("Gatekeeper Error:", error);
-            denyAccess(); // Deny access if there's any error
+            denyAccess(`Erreur de communication: ${error.message}`);
         }
     })();
 </script>
+
+<!-- ======================================================================= -->
 
 
 
