--- a/ranking.html
+++ b/ranking.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 
-<!-- =================== OPTIMIZED GATEKEEPER BLOCK START =================== -->
+<!-- =================== FINAL TIMED GATEKEEPER BLOCK START =================== -->
 <!-- Paste this entire block directly after your opening <body> tag -->
 
 <style>
@@ -79,8 +79,12 @@
     (async function() {
         'use strict';
 
+        // --- CONFIGURATION ---
         const GATEKEEPER_API_URL = 'https://script.google.com/macros/s/AKfycbwoMsiLC8YeSri92eT37fyZGK0sroKA9ORWtFImQM9h55TmxISFnGZg4WtKBEEwGOkQfg/exec';
-        const GATEKEEPER_SESSION_KEY = 'gatekeeper_status'; // Our "wristband" key
+        const GATEKEEPER_SESSION_KEY = 'gatekeeper_pass'; // Our "wristband" key
+        const PASS_EXPIRATION_MINUTES = 20;
+        const PASS_EXPIRATION_MS = PASS_EXPIRATION_MINUTES * 60 * 1000;
+        // ---------------------
 
         const overlay = document.getElementById('gatekeeper-overlay');
         const message = document.getElementById('gatekeeper-message');
@@ -95,17 +99,30 @@
             document.body.style.overflow = 'hidden';
         }
 
-        // --- THIS IS THE NEW, FASTER LOGIC ---
-        // 1. Check for a session "pass" first (the fast path).
-        if (sessionStorage.getItem(GATEKEEPER_SESSION_KEY) === 'granted') {
-            console.log("Gatekeeper: Session pass found. Granting access instantly.");
-            grantAccess();
-            return; // Stop right here, no network call needed.
+        // --- THIS IS THE NEW, FASTER, TIME-LIMITED LOGIC ---
+        // 1. Check for a session "pass" first.
+        const sessionPassString = sessionStorage.getItem(GATEKEEPER_SESSION_KEY);
+        if (sessionPassString) {
+            try {
+                const sessionPass = JSON.parse(sessionPassString);
+                const ageInMs = Date.now() - sessionPass.timestamp;
+
+                // 2. Check if the pass is valid AND not expired.
+                if (sessionPass.status === 'granted' && ageInMs < PASS_EXPIRATION_MS) {
+                    console.log(`Gatekeeper: Valid session pass found (${Math.round(ageInMs/1000)}s old). Granting access instantly.`);
+                    grantAccess();
+                    return; // Stop right here, no network call needed.
+                } else {
+                    console.log("Gatekeeper: Session pass expired. Re-validating...");
+                }
+            } catch (e) {
+                console.warn("Gatekeeper: Corrupted session pass. Re-validating...");
+                sessionStorage.removeItem(GATEKEEPER_SESSION_KEY);
+            }
         }
         // --- END OF NEW LOGIC ---
 
-
-        // If no session pass is found, proceed with the full verification.
+        // If no valid pass is found, proceed with the full verification.
         if (GATEKEEPER_API_URL.includes('PASTE_YOUR_WEB_APP_URL_HERE')) {
             console.error("Gatekeeper: SCRIPT_URL is not configured.");
             denyAccess("SCRIPT_URL non configuré.");
@@ -113,7 +130,7 @@
         }
 
         try {
-            // 2. Fetch the approved user list from your Google Sheet.
+            // 3. Fetch the approved user list from your Google Sheet.
             const response = await fetch(GATEKEEPER_API_URL);
             if (!response.ok) throw new Error(`Server responded with status: ${response.status}`);
             const data = await response.json();
@@ -121,23 +138,25 @@
 
             const approvedUsers = data.users;
 
-            // 3. Check for the master "FALSE" switch.
+            // 4. Check for the master "FALSE" switch.
             if (approvedUsers.length === 1 && approvedUsers[0].toString().toUpperCase() === 'FALSE') {
                 console.log("Gatekeeper disabled by server. Granting access to all.");
-                sessionStorage.setItem(GATEKEEPER_SESSION_KEY, 'granted'); // Give a pass for this session
+                // Give a pass for this session with a new timestamp
+                sessionStorage.setItem(GATEKEEPER_SESSION_KEY, JSON.stringify({ status: 'granted', timestamp: Date.now() }));
                 grantAccess();
                 return;
             }
 
-            // 4. Get the user's name from both jdlmData and mbsData.
+            // 5. Get the user's name from both jdlmData and mbsData.
             let userName = null;
             try { const jdlmData = JSON.parse(localStorage.getItem('jdlmData')); if (jdlmData && jdlmData.nom) userName = jdlmData.nom.trim(); } catch (e) {}
             if (!userName) { try { const mbsData = JSON.parse(localStorage.getItem('mbsData')); if (mbsData && mbsData.nom) userName = mbsData.nom.trim(); } catch (e) {} }
 
-            // 5. Check if the found name is on the approved list.
+            // 6. Check if the found name is on the approved list.
             if (userName && approvedUsers.includes(userName)) {
-                // 5a. SUCCESS! Give the user a "pass" for this session.
-                sessionStorage.setItem(GATEKEEPER_SESSION_KEY, 'granted');
+                // SUCCESS! Give the user a "pass" with the current time.
+                console.log("Gatekeeper: User validated. Creating new session pass.");
+                sessionStorage.setItem(GATEKEEPER_SESSION_KEY, JSON.stringify({ status: 'granted', timestamp: Date.now() }));
                 grantAccess();
             } else {
                 denyAccess();
