--- a/info/faq.html
+++ b/info/faq.html
@@ -158,8 +158,8 @@
 
     <div class="container">
         <header>
-            <h1>Foire Aux Questions (FAQ)</h1>
-            <p>Comment vos données sont-elles traitées ? Transparence et sécurité.</p>
+            <h1>Comment vos données sont-elles traitées ?</h1>
+            <p>Transparence et sécurité.</p>
         </header>
 
         <div class="faq-item">
