--- a/info/privacy.html
+++ b/info/privacy.html
@@ -166,7 +166,7 @@
             <div class="section">
                 <h2>1. Responsable de la protection des renseignements personnels</h2>
                 <p>Pour toute question ou pour exercer vos droits, vous pouvez contacter le responsable à :</p>
-                <p><strong>Courriel :</strong> [Votre adresse courriel ici]</p>
+                <p><strong>Courriel :</strong>notabot.chat@gmail.com</p>
             </div>
 
             <div class="section">
