--- a/main.html
+++ b/main.html
@@ -384,6 +384,6 @@
     </script>
     <script src="js/main-functions.js"></script>
     <script src="js/blacklist.js"></script>
-    <script src="js/rankingtest.js"></script>
+    <script src="js/improve-functions.js"></script>
 </body>
 </html>
