--- a/main.html
+++ b/main.html
@@ -384,5 +384,6 @@
     </script>
     <script src="js/main-functions.js"></script>
     <script src="js/blacklist.js"></script>
+    <script src="js/auto-sync.js"></script> 
 </body>
 </html>
