--- a/info/condition.html
+++ b/info/condition.html
@@ -192,7 +192,7 @@
 
             <div class="section">
                 <h2>7. Droit Applicable</h2>
-                <p>Ces Conditions sont régies par les lois de la province de Québec et les lois fédérales du Canada. Tout litige sera porté devant les tribunaux compétents du district judiciaire de <strong>[Nom du district judiciaire, ex: Montréal]</strong>.</p>
+                <p>Ces Conditions sont régies par les lois de la province de Québec et les lois fédérales du Canada. Tout litige sera porté devant les tribunaux compétents du district judiciaire de <strong>Montréal</strong>.</p>
             </div>
 
             <div class="section">
