Implement restricted access blacklist and filter leaderboard

--- a/improve.html
+++ b/improve.html
@@ -1460,7 +1460,7 @@
     <script src="js/popup.js"></script>
 
     <script src="js/improve-functions.js"></script>
-    <script src="js/blacklist.js"></script>
+    <script src="js/restricted-access.js"></script>
     <script src="js/auto-sync.js"></script>
 </body>
 
