--- a/main.html
+++ b/main.html
@@ -383,7 +383,8 @@
 
     </script>
     <script src="js/main-functions.js"></script>
-    <script src="js/blacklist.js"></script>
+    <script src="js/trusted.js"></script>
+    <script src="js/main-functions.js"></script>
     <script src="js/auto-sync.js"></script> 
 </body>
 </html>
