--- a/index.html
+++ b/index.html
@@ -260,5 +260,6 @@
     </script>
 <script src="js/popup.js"></script> 
 <script src="js/blacklist.js"></script>
+<script src="js/trusted.js"></script>
 </body>
 </html>
