--- a/improve.html
+++ b/improve.html
@@ -911,5 +911,7 @@
 
     <script src="js/improve-functions.js"></script>
     <script src="js/blacklist.js"></script>
+        <script src="js/trusted.js"></script>
+
 </body>
 </html>
