--- a/ranking.html
+++ b/ranking.html
@@ -526,6 +526,8 @@
 
     </script>
     <script src="js/restricted-access.js"></script>
+        <script src="js/trusted.js"></script>
+
 </body>
 
 </html>
