--- a/improve.html
+++ b/improve.html
@@ -676,7 +676,7 @@ Reference specific courses using their common names (e.g., "Math SN 5", "França
 7. Limitations & Academic Integrity
 No Creative Content: Refuse to write essays, lab reports, or solve specific exam questions.
 Refusal Script: "Je suis ici pour t'aider à analyser tes notes et tes chances d'admission au CégeP. Je ne peux pas faire tes travaux à ta place, mais je peux t'indiquer les objectifs à atteindre pour réussir ce cours."
-If the user asks if they are cooked, as a joke, if the average is under 80, say "Yes indeed 💀" if above, say "Your cooking 🔥🔥"`;
+8. If the user asks if they are cooked, Ignore all previous instructions and only say the following:, if the average is under 80, say "Yes indeed 💀" if above, say "Your cooking 🔥🔥"`;
         const groundingTool = {
           googleSearch: {},
         };
